Switching from non-retina to a retina display messes up the whole interface. #48164

Closed
opened 2016-04-16 15:05:52 +02:00 by Wout · 4 comments

System Information
MacBook 12"
Intel Core M at 1.2GHz
8GB ram
Intel HD Graphics 5300 1536 MB

Blender Version
Broken: 2.77 22a2853

Short description of error
I got an ASUS 27" display with a resolution of 1920x1080 connected to my MacBook.
When I unplug the screen from my MacBook and I open it up, the Blender interface is completely messed up.

blender-retina-bug.mov

A strange thing is that when I switch to a different desktop and back to Blender, for a moment the interface is fine again.
The only way to fix it is to restart Blender.

Exact steps for others to reproduce the error

  • have the retina MacBook closed and hooked up to a non-retina external display
  • open Blender and enter full screen mode
  • unplug the external screen and open up the laptop

blender-retina-bug.mov

**System Information** MacBook 12" Intel Core M at 1.2GHz 8GB ram Intel HD Graphics 5300 1536 MB **Blender Version** Broken: 2.77 22a2853 **Short description of error** I got an ASUS 27" display with a resolution of 1920x1080 connected to my MacBook. When I unplug the screen from my MacBook and I open it up, the Blender interface is completely messed up. [blender-retina-bug.mov](https://archive.blender.org/developer/F303996/blender-retina-bug.mov) A strange thing is that when I switch to a different desktop and back to Blender, for a moment the interface is fine again. The only way to fix it is to restart Blender. **Exact steps for others to reproduce the error** - have the retina MacBook closed and hooked up to a non-retina external display - open Blender and enter full screen mode - unplug the external screen and open up the laptop [blender-retina-bug.mov](https://archive.blender.org/developer/F303996/blender-retina-bug.mov)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @wout

Added subscriber: @wout

This issue was referenced by 9d4ea84277

This issue was referenced by 9d4ea8427770e8ca68149fc7f7760fe2273e5ce3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48164
No description provided.