Fix T48164: messed up interface switching between retina and non-retina display on OS X.