source/blender/windowmanager/intern/wm_window.c
@@ -1198,6 +1198,10 @@ static int ghost_event_proc(GHOST_EventHandle evt, GHOST_TUserDataPtr C_void_ptr
 				
 				U.pixelsize = wm_window_pixelsize(win);
 				BKE_blender_userdef_refresh();
+
+				wm_window_make_drawable(wm, win);
+				wm_draw_window_clear(win);
+
 				WM_event_add_notifier(C, NC_SCREEN | NA_EDITED, NULL);
 				WM_event_add_notifier(C, NC_WINDOW | NA_EDITED, NULL);
 
